--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
-PROJECT (cpp-quality-project VERSION 0.0.1)
+PROJECT (stm32-helloworld VERSION 0.0.1)
 ENABLE_TESTING ()
 
 LIST (APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/)
@@ -10,6 +10,6 @@ CONAN_BASIC_SETUP (PROFILE ${CMAKE_SOURCE_DIR}/conan_profiles/linux-x86)
 INCLUDE (GenerateGitHashAtConfigTime)
 INCLUDE (GenerateGitHashAtBuildTime)
 
-ADD_SUBDIRECTORY (project)
+ADD_SUBDIRECTORY (desktop_client)
 ADD_SUBDIRECTORY (test)
 ADD_SUBDIRECTORY (documentation)
