--- a/documentation/code_documentation.doxygen.in
+++ b/documentation/code_documentation.doxygen.in
@@ -1,9 +1,9 @@
 # Doxyfile
 
 # Set the project name
-PROJECT_NAME = ProjectName
+PROJECT_NAME = STM32 Hello World
 
-PROJECT_LOGO = @CMAKE_SOURCE_DIRECTORY@/documentation/resources/project_or_company_logo.png
+PROJECT_LOGO = @CMAKE_SOURCE_DIRECTORY@/documentation/resources/project_logo.png
 
 # Set the project version
 <!-- PROJECT_VERSION = 1.0 -->
@@ -13,7 +13,7 @@ OUTPUT_DIRECTORY = @CMAKE_CURRENT_BINARY_DIR@/code_documentation/
 CREATE_SUBDIRS = YES
 
 # Set the input directories for the source code
-INPUT = @CMAKE_SOURCE_DIR@/project
+INPUT = @CMAKE_SOURCE_DIR@/desktop_client
 RECURSIVE = YES
 
 # Set the file patterns to include in the documentation
