Rename the templated probe library and start device_handler library

--- a/desktop_client/CMakeLists.txt
+++ b/desktop_client/CMakeLists.txt
@@ -4,11 +4,11 @@ SET (CMAKE_CXX_STANDARD 14)
 SET (CMAKE_CXX_EXTENSIONS OFF)
 SET (CMAKE_CXX_STANDARD_REQUIRED ON)
 
-ADD_SUBDIRECTORY (probelibrary)
+ADD_SUBDIRECTORY (device_handler)
 
 ADD_EXECUTABLE (${EXENAME} main.cpp)
 TARGET_INCLUDE_DIRECTORIES (${EXENAME} PRIVATE ${CMAKE_BINARY_DIR})
-TARGET_LINK_LIBRARIES (${EXENAME} PUBLIC probe)
+TARGET_LINK_LIBRARIES (${EXENAME} PUBLIC device_handler)
 
 INSTALL (TARGETS ${EXENAME} RUNTIME DESTINATION bin)
 
@@ -16,7 +16,7 @@ INCLUDE (Packaging)
 
 ADD_CUSTOM_TARGET (
   disassemble
-  COMMAND /usr/bin/objdump -S $<TARGET_FILE:desktop_client> >
+  COMMAND /usr/bin/objdump -S $<TARGET_FILE:${EXENAME}> >
           ${CMAKE_BINARY_DIR}/${EXENAME}.dump
   COMMENT "Disassemble ${EXENAME}"
   DEPENDS ${EXENAME})
@@ -30,7 +30,7 @@ ADD_CUSTOM_TARGET (
 ADD_CUSTOM_TARGET (
   benchmark
   COMMENT "Benchmark target"
-  COMMAND $<TARGET_FILE:probe_benchmark> >
+  COMMAND $<TARGET_FILE:device_handler_benchmark> >
           ${CMAKE_SOURCE_DIR}/benchmark_report.txt)
 
 ADD_TEST (
@@ -41,6 +41,6 @@ SET_TESTS_PROPERTIES (code_coverage PROPERTIES FIXTURES_CLEANUP unit_tests)
 
 ADD_TEST (
   NAME benchmarking
-  COMMAND $<TARGET_FILE:probe_benchmark>
+  COMMAND $<TARGET_FILE:device_handler_benchmark>
   WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-SET_TESTS_PROPERTIES (benchmarking PROPERTIES DEPENDS benchmark)
+SET_TESTS_PROPERTIES (benchmarking PROPERTIES DEPENDS device_handler_benchmark)
