--- a/documentation/CMakeLists.txt
+++ b/documentation/CMakeLists.txt
@@ -1,16 +1,4 @@
-INCLUDE (CreateLatexDocument)
-
-SET (requirements_document "requirements_document")
-SET (REQUIREMENTS_DOCUMENT_MAIN_TEX ${requirements_document}.tex)
-SET (REQUIREMENTS_DOCUMENTS_RESOURCES_FILES
-     ${CMAKE_CURRENT_SOURCE_DIR}/resources/project_logo.png)
-SET (REQUIREMENTS_DOCUMENTS_BIBLIOGRAPHY
-     ${CMAKE_CURRENT_SOURCE_DIR}/library.bib)
-
-CREATELATEXDOCUMENT (
-  "${requirements_document}" "${REQUIREMENTS_DOCUMENT_MAIN_TEX}"
-  "${REQUIREMENTS_DOCUMENTS_RESOURCES_FILES}"
-  "${REQUIREMENTS_DOCUMENTS_BIBLIOGRAPHY}")
+ADD_SUBDIRECTORY (requirements_engineering)
 
 # Doxygen documentation
 CONFIGURE_FILE (${CMAKE_CURRENT_SOURCE_DIR}/code_documentation.doxygen.in
