--- a/documentation/code_documentation.doxygen.in
+++ b/documentation/code_documentation.doxygen.in
@@ -3,10 +3,10 @@
 # Set the project name
 PROJECT_NAME = STM32 Hello World
 
-PROJECT_LOGO = @CMAKE_SOURCE_DIRECTORY@/documentation/resources/project_logo.png
+PROJECT_LOGO = @CMAKE_CURRENT_SOURCE_DIR@/resources/project_logo.png
 
 # Set the project version
-<!-- PROJECT_VERSION = 1.0 -->
+PROJECT_VERSION = @PROJECT_VERSION@
 
 # Set the output directory for the generated documentation
 OUTPUT_DIRECTORY = @CMAKE_CURRENT_BINARY_DIR@/code_documentation/
@@ -26,10 +26,10 @@ GENERATE_HTML = YES
 HTML_OUTPUT = html
 
 # Enable the generation of a compound index
-<!-- GENERATE_HTML_HELP = YES -->
+GENERATE_HTML_HELP = YES
 
 # Enable the generation of a search index
-<!-- GENERATE_SEARCHHELP = YES -->
+GENERATE_SEARCHHELP = YES
 
 GENERATE_TESTLIST = YES
 GENERATE_BUGLIST = YES 
