--- a/desktop_client/device_handler/tests/CMakeLists.txt
+++ b/desktop_client/device_handler/tests/CMakeLists.txt
@@ -8,9 +8,10 @@ SET (CMAKE_EXE_LINKER_FLAGS
      "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
 FIND_PACKAGE (GTest REQUIRED)
 INCLUDE_DIRECTORIES (${GTEST_INCLUDE_DIRS})
-ADD_EXECUTABLE (probe_unittest unit_test.cpp)
-TARGET_LINK_LIBRARIES (probe_unittest device_handler ${GTEST_BOTH_LIBRARIES}
-                       --coverage)
-ADD_TEST (NAME probe_unit COMMAND probe_unittest)
-SET_TESTS_PROPERTIES (probe_unit PROPERTIES FIXTURES_REQUIRED unit_tests)
+ADD_EXECUTABLE (device_handler_test unit_test.cpp)
+TARGET_LINK_LIBRARIES (device_handler_test device_handler
+                       ${GTEST_BOTH_LIBRARIES} --coverage)
+ADD_TEST (NAME device_handler_test COMMAND device_handler_test)
+SET_TESTS_PROPERTIES (device_handler_test PROPERTIES FIXTURES_REQUIRED
+                                                     unit_tests)
 SET (PROBE_BENCHMARKDIR ${CMAKE_CURRENT_BINARY_DIR})
