--- a/desktop_client/device_handler/CMakeLists.txt
+++ b/desktop_client/device_handler/CMakeLists.txt
@@ -1,4 +1,14 @@
 ENABLE_TESTING ()
+
+# SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
+SET (GCC_COVERAGE_COMPILE_FLAGS
+     "-g -O3 -coverage -fprofile-arcs -ftest-coverage")
+SET (GCC_COVERAGE_LINK_FLAGS "-coverage -lgcov")
+
+SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
+SET (CMAKE_EXE_LINKER_FLAGS
+     "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
+
 SET (LIBNAME device_handler)
 SET (LIBSRC src/device_handler.cpp)
 SET (LIBHDRS include/device_handler.h)
@@ -8,6 +18,7 @@ ADD_LIBRARY (${LIBNAME} SHARED ${LIBSRC})
 TARGET_INCLUDE_DIRECTORIES (
   ${LIBNAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
                     $<INSTALL_INTERFACE:include>)
+TARGET_LINK_LIBRARIES (${LIBNAME} --coverage)
 SET_TARGET_PROPERTIES (${LIBNAME} PROPERTIES PUBLIC_HEADER "${LIBHDRS}")
 SET_TARGET_PROPERTIES (${LIBNAME} PROPERTIES RESOURCE "")
 INSTALL (
