Refactor build process to distribute between Debug build and Release build.

--- a/desktop_client/CMakeLists.txt
+++ b/desktop_client/CMakeLists.txt
@@ -27,20 +27,26 @@ ADD_CUSTOM_TARGET (
   COMMENT "Convert ${EXENAME} to assembly"
   ${CMAKE_SOURCE_DIR}/main.cpp)
 
-ADD_CUSTOM_TARGET (
-  benchmark
-  COMMENT "Benchmark target"
-  COMMAND $<TARGET_FILE:device_handler_benchmark> >
-          ${CMAKE_SOURCE_DIR}/benchmark_report.txt)
+IF (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+  ADD_TEST (
+    NAME code_coverage
+    COMMAND gcovr -r .. --fail-under-line 100 --html --html-details -o
+            index.html
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+  SET_TESTS_PROPERTIES (code_coverage PROPERTIES FIXTURES_CLEANUP unit_tests)
+ENDIF ()
 
-ADD_TEST (
-  NAME code_coverage
-  COMMAND gcovr -r .. --fail-under-line 100 --html --html-details -o index.html
-  WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-SET_TESTS_PROPERTIES (code_coverage PROPERTIES FIXTURES_CLEANUP unit_tests)
+IF (${CMAKE_BUILD_TYPE} STREQUAL "Release")
+  ADD_CUSTOM_TARGET (
+    benchmark
+    COMMENT "Benchmark target"
+    COMMAND $<TARGET_FILE:device_handler_benchmark> >
+            ${CMAKE_SOURCE_DIR}/benchmark_report.txt)
 
-ADD_TEST (
-  NAME benchmarking
-  COMMAND $<TARGET_FILE:device_handler_benchmark>
-  WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-SET_TESTS_PROPERTIES (benchmarking PROPERTIES DEPENDS device_handler_benchmark)
+  ADD_TEST (
+    NAME benchmarking
+    COMMAND $<TARGET_FILE:device_handler_benchmark>
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+  SET_TESTS_PROPERTIES (benchmarking PROPERTIES DEPENDS
+                                                device_handler_benchmark)
+ENDIF ()
