--- a/desktop_client/device_handler/tests/CMakeLists.txt
+++ b/desktop_client/device_handler/tests/CMakeLists.txt
@@ -6,3 +6,17 @@ TARGET_LINK_LIBRARIES (device_handler_test device_handler
 ADD_TEST (NAME device_handler_test COMMAND device_handler_test)
 SET_TESTS_PROPERTIES (device_handler_test PROPERTIES FIXTURES_REQUIRED
                                                      unit_tests)
+
+ADD_TEST (
+  NAME device_handler_test_setup
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  COMMAND test_setup.sh ${CMAKE_CURRENT_BINARY_DIR})
+SET_TESTS_PROPERTIES (device_handler_test_setup PROPERTIES FIXTURES_SETUP
+                                                           unit_tests)
+
+ADD_TEST (
+  NAME device_handler_test_cleanup
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  COMMAND test_cleanup.sh ${CMAKE_CURRENT_BINARY_DIR})
+SET_TESTS_PROPERTIES (device_handler_test_cleanup PROPERTIES FIXTURES_CLEANUP
+                                                             unit_tests)
