--- a/desktop_client/CMakeLists.txt
+++ b/desktop_client/CMakeLists.txt
@@ -1,52 +1,10 @@
-SET (EXENAME desktop_client)
-PROJECT (${EXENAME} LANGUAGES CXX)
+SET (DESKTOP_CLIENT_APP_NAME desktop_client)
+PROJECT (${DESKTOP_CLIENT_APP_NAME} LANGUAGES CXX)
 SET (CMAKE_CXX_STANDARD 14)
 SET (CMAKE_CXX_EXTENSIONS OFF)
 SET (CMAKE_CXX_STANDARD_REQUIRED ON)
 
-ADD_SUBDIRECTORY (device_handler)
+ADD_SUBDIRECTORY (libs)
+ADD_SUBDIRECTORY (application)
 
-ADD_EXECUTABLE (${EXENAME} main.cpp)
-TARGET_INCLUDE_DIRECTORIES (${EXENAME} PRIVATE ${CMAKE_BINARY_DIR})
-TARGET_LINK_LIBRARIES (${EXENAME} PUBLIC device_handler)
-
-INSTALL (TARGETS ${EXENAME} RUNTIME DESTINATION bin)
-
-INCLUDE (Packaging)
-
-ADD_CUSTOM_TARGET (
-  disassemble
-  COMMAND /usr/bin/objdump -S $<TARGET_FILE:${EXENAME}> >
-          ${CMAKE_BINARY_DIR}/${EXENAME}.dump
-  COMMENT "Disassemble ${EXENAME}"
-  DEPENDS ${EXENAME})
-
-ADD_CUSTOM_TARGET (
-  convert_to_assembly
-  COMMAND g++ -S
-  COMMENT "Convert ${EXENAME} to assembly"
-  ${CMAKE_SOURCE_DIR}/main.cpp)
-
-IF (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
-  ADD_TEST (
-    NAME code_coverage
-    COMMAND gcovr -r .. --fail-under-line 100 --html --html-details -o
-            index.html
-    WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-  SET_TESTS_PROPERTIES (code_coverage PROPERTIES FIXTURES_CLEANUP unit_tests)
-ENDIF ()
-
-IF (${CMAKE_BUILD_TYPE} STREQUAL "Release")
-  ADD_CUSTOM_TARGET (
-    benchmark
-    COMMENT "Benchmark target"
-    COMMAND $<TARGET_FILE:device_handler_benchmark> >
-            ${CMAKE_SOURCE_DIR}/benchmark_report.txt)
-
-  ADD_TEST (
-    NAME benchmarking
-    COMMAND $<TARGET_FILE:device_handler_benchmark>
-    WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-  SET_TESTS_PROPERTIES (benchmarking PROPERTIES DEPENDS
-                                                device_handler_benchmark)
-ENDIF ()
+INCLUDE (Processes)
