--- a/desktop_client/libs/device_handler/CMakeLists.txt
+++ b/desktop_client/libs/device_handler/CMakeLists.txt
@@ -1,31 +1,5 @@
-IF (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
-
-  ADD_DEFINITIONS (-DDEBUG)
-  SET (GCC_COVERAGE_COMPILE_FLAGS
-       "-g -O0 -coverage -fprofile-arcs -ftest-coverage")
-  SET (GCC_COVERAGE_LINK_FLAGS "-coverage -lgcov")
-  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
-  SET (CMAKE_EXE_LINKER_FLAGS
-       "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
-
-ENDIF ()
-
-SET (LIBNAME device_handler)
-SET (LIBSRC src/device_handler.cpp)
-SET (LIBHDRS include/${LIBNAME}/device_handler.h)
-
-ADD_LIBRARY (${LIBNAME} SHARED ${LIBSRC})
-
-TARGET_INCLUDE_DIRECTORIES (
-  ${LIBNAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
-                    $<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
-TARGET_LINK_LIBRARIES (${LIBNAME} --coverage)
-SET_TARGET_PROPERTIES (${LIBNAME} PROPERTIES PUBLIC_HEADER "${LIBHDRS}")
-SET_TARGET_PROPERTIES (${LIBNAME} PROPERTIES RESOURCE "")
-INSTALL (
-  TARGETS ${LIBNAME}
-  PUBLIC_HEADER DESTINATION include/${LIBNAME}
-  LIBRARY DESTINATION lib/${LIBNAME} COMPONENT Libraries)
+CREATE_LIBRARY (SRCS src/device_handler.cpp PUBLIC_HEADERS
+                include/${LIBNAME}/device_handler.h)
 
 ADD_SUBDIRECTORY (tests)
 
@@ -45,7 +19,7 @@ ADD_CUSTOM_COMMAND (
 
 # valgrind-${LIBNAME}-analysis
 ADD_CUSTOM_TARGET (
-  valgrind
+  valgrind-${LIBNAME}
   DEPENDS valgrind-${LIBNAME}-out.txt
   COMMAND echo valgrind)
 
