--- a/desktop_client/libs/device_handler/tests/CMakeLists.txt
+++ b/desktop_client/libs/device_handler/tests/CMakeLists.txt
@@ -1,22 +1,15 @@
-FIND_PACKAGE (GTest REQUIRED)
-INCLUDE_DIRECTORIES (${GTEST_INCLUDE_DIRS})
-ADD_EXECUTABLE (device_handler_test unit_test.cpp)
-TARGET_LINK_LIBRARIES (device_handler_test device_handler
-                       ${GTEST_BOTH_LIBRARIES})
-ADD_TEST (NAME device_handler_test COMMAND device_handler_test)
-SET_TESTS_PROPERTIES (device_handler_test PROPERTIES FIXTURES_REQUIRED
-                                                     unit_tests)
+ADD_LIBRARY_UNIT_TEST (SRCS unit_test.cpp)
 
 ADD_TEST (
-  NAME device_handler_test_setup
+  NAME ${LIBNAME}_test_setup
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   COMMAND test_setup.sh ${CMAKE_CURRENT_BINARY_DIR})
-SET_TESTS_PROPERTIES (device_handler_test_setup PROPERTIES FIXTURES_SETUP
-                                                           unit_tests)
+SET_TESTS_PROPERTIES (${LIBNAME}_test_setup PROPERTIES FIXTURES_SETUP
+                                                       unit_tests)
 
 ADD_TEST (
-  NAME device_handler_test_cleanup
+  NAME ${LIBNAME}_test_cleanup
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   COMMAND test_cleanup.sh ${CMAKE_CURRENT_BINARY_DIR})
-SET_TESTS_PROPERTIES (device_handler_test_cleanup PROPERTIES FIXTURES_CLEANUP
-                                                             unit_tests)
+SET_TESTS_PROPERTIES (${LIBNAME}_test_cleanup PROPERTIES FIXTURES_CLEANUP
+                                                         unit_tests)
