Refactor CMake with more Functions for Library

--- a/desktop_client/libs/device_handler/benchmark/CMakeLists.txt
+++ b/desktop_client/libs/device_handler/benchmark/CMakeLists.txt
@@ -1,10 +1,12 @@
 SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
-ADD_EXECUTABLE (device_handler_benchmark device_handler_benchmark.cpp)
-TARGET_LINK_LIBRARIES (device_handler_benchmark device_handler)
+ADD_EXECUTABLE (${LIBNAME}_benchmark ${LIBNAME}_benchmark.cpp)
+TARGET_LINK_LIBRARIES (${LIBNAME}_benchmark device_handler)
 
 ADD_TEST (
-  NAME device_handler_benchmark
-  COMMAND $<TARGET_FILE:device_handler_benchmark> > benchmark_report.txt
+  NAME ${LIBNAME}_benchmark
+  COMMAND $<TARGET_FILE:${LIBNAME}_benchmark> > benchmark_report.txt
+  CONFIGURATIONS Release
   WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-SET_TESTS_PROPERTIES (device_handler_benchmark PROPERTIES FIXTURES_REQUIRED
-                                                          benchmarking)
+SET_TESTS_PROPERTIES (
+  ${LIBNAME}_benchmark PROPERTIES FIXTURES_REQUIRED performance LABELS
+                                  performance)
