Add validation step on the CI

--- a/.github/workflows/ubuntu_2204_build_pipeline.yml
+++ b/.github/workflows/ubuntu_2204_build_pipeline.yml
@@ -17,5 +17,7 @@ jobs:
         run: ./scripts/build.sh
       - name: Tests
         run: ./scripts/test.sh --stop-on-failure
-      - name: Tests 
+      - name: Validation
+        run: ./scripts/validate.sh
+      - name: Packaging
         run: ./scripts/packaging.sh
