--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,11 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v3      
+        uses: actions/checkout@v3   
+      - name: Create empty ssh dir
+        run: mkdir -p ~/.ssh
+      - name: Create dummy bash_aliases
+        run: touch ~/.bash_aliases   
       - name: Build the devcontainer
         uses: devcontainers/ci@v0.3
         with: 
