Add HandleDevice class to handle device file

--- a/desktop_client/libs/device_handler/CMakeLists.txt
+++ b/desktop_client/libs/device_handler/CMakeLists.txt
@@ -1,5 +1,6 @@
-CREATE_LIBRARY (SRCS src/device_handler.cpp PUBLIC_HEADERS
-                include/${LIBNAME}/device_handler.h)
+CREATE_LIBRARY (
+  SRCS src/device_handler.cpp src/os_abstraction_layer.cpp PUBLIC_HEADERS
+  include/${LIBNAME}/device_handler.h include/${LIBNAME}/os_abstraction_layer.h)
 
 ADD_SUBDIRECTORY (tests)
 
