Add a system interfaces with messages and serializer

--- a/desktop_client/libs/device_handler/CMakeLists.txt
+++ b/desktop_client/libs/device_handler/CMakeLists.txt
@@ -1,6 +1,13 @@
+SET (LIBNAME device_handler)
 CREATE_LIBRARY (
-  SRCS src/device_handler.cpp src/os_abstraction_layer.cpp PUBLIC_HEADERS
-  include/${LIBNAME}/device_handler.h include/${LIBNAME}/os_abstraction_layer.h)
+  SRCS
+  src/device_handler.cpp
+  src/os_abstraction_layer.cpp
+  PUBLIC_HEADERS
+  include/${LIBNAME}/device_handler.h
+  include/${LIBNAME}/os_abstraction_layer.h
+  LINK_LIBRARIES
+  messages)
 
 ADD_SUBDIRECTORY (tests)
 
