--- a/desktop_client/CMakeLists.txt
+++ b/desktop_client/CMakeLists.txt
@@ -4,6 +4,7 @@ SET (CMAKE_CXX_STANDARD 14)
 SET (CMAKE_CXX_EXTENSIONS OFF)
 SET (CMAKE_CXX_STANDARD_REQUIRED ON)
 
+ADD_SUBDIRECTORY (system_interfaces)
 ADD_SUBDIRECTORY (libs)
 ADD_SUBDIRECTORY (application)
 
