Add some check to .precommit

--- a/documentation/CMakeLists.txt
+++ b/documentation/CMakeLists.txt
@@ -9,8 +9,9 @@ ADD_CUSTOM_COMMAND (
   VERBATIM
   COMMAND doxygen ${CMAKE_CURRENT_BINARY_DIR}/code_documentation.doxygen
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-  COMMENT "Building code documentation")
+  COMMENT "Building doxygen code documentation")
 ADD_CUSTOM_TARGET (
   code_documentation
+  COMMENT "Target code_documentation"
   SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/code_documentation.doxygen.in
   DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/code_documentation/html/index.html)
