--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,37 @@ repos:
     hooks:
     - id: cmake-format
     # - id: cmake-lint
-  - repo: https://github.com/pre-commit/mirrors-clang-format
-    rev: v14.0.6
+  - repo: https://github.com/pocc/pre-commit-hooks
+    rev: v1.3.5
     hooks:
     - id: clang-format
+      args: [-i]
+    # - id: clang-tidy
+    # - id: cppcheck
+    # - id: cpplint
+    # - id: include-what-you-use
+  # - repo: https://github.com/pre-commit/mirrors-clang-format
+  #   rev: v14.0.6
+  #   hooks:
+  #   - id: clang-format
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.6.0
+    hooks:
+    - id: trailing-whitespace
+  - repo: https://github.com/detailyang/pre-commit-shell
+    rev: v1.0.6
+    hooks:
+    - id: shell-lint
+  - repo: https://github.com/lovesegfault/beautysh
+    rev: v6.2.1
+    hooks:
+    - id: beautysh
+  - repo: https://github.com/jorisroovers/gitlint
+    rev: v0.19.1
+    hooks:
+    - id: gitlint
+    - id: gitlint-ci
+  - repo: https://github.com/pryorda/dockerfilelint-precommit-hooks
+    rev: v0.1.0
+    hooks:
+    - id: dockerfilelint
