Add os_abstraction_layer_interface for mocking and testing

--- a/desktop_client/libs/device_handler/CMakeLists.txt
+++ b/desktop_client/libs/device_handler/CMakeLists.txt
@@ -6,6 +6,7 @@ CREATE_LIBRARY (
   PUBLIC_HEADERS
   include/${LIBNAME}/device_handler.h
   include/${LIBNAME}/os_abstraction_layer.h
+  include/${LIBNAME}/os_abstraction_layer_interface.h
   LINK_LIBRARIES
   messages)
 
