Fix missing code coverage include <thread> had to be exlcuded in os_abstraction_layer test for unclear reasons. It will have to be re-included with further implementation

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,11 +22,12 @@
         "ms-vscode.cpptools-themes",
         "hbenl.vscode-test-explorer",
         "malcolmmielle.semantic-highlighting",
-        "derivitec-ltd.cmake-test-adapter"
+        "derivitec-ltd.cmake-test-adapter",
+        "jebbs.plantuml"
       ]
     }
   },
-  "extensions":,
+  "extensions": ,
   "postCreateCommand": "sudo chown vscode:vscode /workspace && pre-commit install",
   "appPort": [],
   "remoteUser": "vscode",
