os abstraction layer (#6)
* Add HandleDevice class to handle device file

* OS Abstraction Layer

* Add a system interfaces with messages and serializer

* Add some check to .precommit

* Add os_abstraction_layer_interface for mocking and testing

* Fix missing code coverage
include <thread> had to be exlcuded in os_abstraction_layer test for unclear reasons.
It will have to be re-included with further implementation

--- a/desktop_client/libs/device_handler/CMakeLists.txt
+++ b/desktop_client/libs/device_handler/CMakeLists.txt
@@ -1,5 +1,14 @@
-CREATE_LIBRARY (SRCS src/device_handler.cpp PUBLIC_HEADERS
-                include/${LIBNAME}/device_handler.h)
+SET (LIBNAME device_handler)
+CREATE_LIBRARY (
+  SRCS
+  src/device_handler.cpp
+  src/os_abstraction_layer.cpp
+  PUBLIC_HEADERS
+  include/${LIBNAME}/device_handler.h
+  include/${LIBNAME}/os_abstraction_layer.h
+  include/${LIBNAME}/os_abstraction_layer_interface.h
+  LINK_LIBRARIES
+  messages)
 
 ADD_SUBDIRECTORY (tests)
 
