os abstraction layer (#6)
* Add HandleDevice class to handle device file

* OS Abstraction Layer

* Add a system interfaces with messages and serializer

* Add some check to .precommit

* Add os_abstraction_layer_interface for mocking and testing

* Fix missing code coverage
include <thread> had to be exlcuded in os_abstraction_layer test for unclear reasons.
It will have to be re-included with further implementation

--- a/.github/workflows/ubuntu_2204_documentation_pipeline.yml
+++ b/.github/workflows/ubuntu_2204_documentation_pipeline.yml
@@ -9,8 +9,5 @@ jobs:
       - uses: actions/checkout@v1
       - name: Install development dependencies
         run: ./.devcontainer/setup_documentation_environment_on_ubuntu_22.sh
-      - name: Configure 
-        run: ./scripts/configure.sh
       - name: Make documentation
-        run: ./scripts/document.sh
-      
+        run: make documentation
