Reduce tex dependencies (#8)
* os abstraction layer (#6)

* Add HandleDevice class to handle device file

* OS Abstraction Layer

* Add a system interfaces with messages and serializer

* Add some check to .precommit

* Add os_abstraction_layer_interface for mocking and testing

* Fix missing code coverage
include <thread> had to be exlcuded in os_abstraction_layer test for unclear reasons.
It will have to be re-included with further implementation

* Reduce tex dependencies

--- a/.github/workflows/ubuntu_2204_build_pipeline.yml
+++ b/.github/workflows/ubuntu_2204_build_pipeline.yml
@@ -10,14 +10,14 @@ jobs:
       - name: Install development dependencies
         run: ./.devcontainer/setup_build_environment_on_ubuntu_22.sh
       - name: Check formating
-        run: ./scripts/format.sh
+        run: make format
       - name: Configure
-        run: ./scripts/configure.sh
+        run: make configure_release
       - name: Build
-        run: ./scripts/build.sh
+        run: make build_release
       - name: Tests
-        run: ./scripts/test.sh --stop-on-failure
+        run: make test
       - name: Validation
-        run: ./scripts/validate.sh
+        run: make validate
       - name: Packaging
-        run: ./scripts/packaging.sh
+        run: make packaging
