--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,4 +24,4 @@ jobs:
             -v ${{ github.workspace }}:/workspace
             --name ci-container
           image: ci-image:latest
-          run: /workspace/scripts/configure.sh && /workspace/scripts/build.sh
+          run: make configure && make build_release
