--- a/.github/workflows/ubuntu_2204_build_pipeline.yml
+++ b/.github/workflows/ubuntu_2204_build_pipeline.yml
@@ -27,7 +27,7 @@ jobs:
           name: package
           path: ./build-x86-Release/stm32-helloworld-0.0.1-Linux.deb
 
-  Test-debian-package-installation-on-ubuntu-22-04:
+  test_debian_package_installation_on_ubuntu_22-04:
     needs: build_pipeline
     runs-on: ubuntu-22.04
     steps:
@@ -35,9 +35,10 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: package
+        path: /tmp/stm32-helloworld-0.0.1-Linux.deb
 
     - name: Install package
-      run: sudo apt install -y stm32-helloworld-0.0.1-Linux.deb
+      run: sudo apt-get install -y /tmp/stm32-helloworld-0.0.1-Linux.deb
 
     - name: Smoke test desktop_client
       run: desktop_client
