--- a/.github/workflows/ubuntu_2204_build_pipeline.yml
+++ b/.github/workflows/ubuntu_2204_build_pipeline.yml
@@ -35,7 +35,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: package
-        path: /tmp/stm32-helloworld-0.0.1-Linux.deb
+        path: /tmp/
 
     - name: Install package
       run: sudo apt-get install -y /tmp/stm32-helloworld-0.0.1-Linux.deb
