--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,9 @@ INCLUDE (AddLibraryUnitTest)
 INCLUDE (CreateLibrary)
 ENABLE_TESTING ()
 
+SET (CMAKE_SKIP_INSTALL_RPATH TRUE)
+SET (INSTALL_RPATH_USE_LINK_PATH TRUE)
+
 ADD_SUBDIRECTORY (desktop_client)
 ADD_SUBDIRECTORY (test)
 ADD_SUBDIRECTORY (documentation)
