--- a/.github/workflows/ubuntu_2204_build_pipeline.yml
+++ b/.github/workflows/ubuntu_2204_build_pipeline.yml
@@ -21,3 +21,24 @@ jobs:
         run: make validate
       - name: Packaging
         run: make packaging
+      - name: Upload package
+        uses: actions/upload-artifact@v2
+        with:
+          name: package
+          path: ./build-x86-Release/stm32-helloworld-0.0.1-Linux.deb
+
+  test_debian_package_installation_on_ubuntu_22-04:
+    needs: build_pipeline
+    runs-on: ubuntu-22.04
+    steps:
+    - name: Download package
+      uses: actions/download-artifact@v2
+      with:
+        name: package
+        path: /tmp/
+
+    - name: Install package
+      run: sudo apt-get install -y /tmp/stm32-helloworld-0.0.1-Linux.deb
+
+    - name: Smoke test desktop_client
+      run: if ! $(ldd /usr/bin/desktop_client | grep -q "not found") ; then echo OK ;else "Some libraries not found for /usr/bin/desktop_client"; ldd /usr/bin/desktop_client ; fi
