--- a/documentation/development_process/software_build_process/index.html.in
+++ b/documentation/development_process/software_build_process/index.html.in
@@ -11,6 +11,8 @@
     <img src="graph-packaging.png" alt="Software packaging target chain">
     <h2>Software documentation target chain</h2>
     <img src="graph-documentation.png" alt="Software documentation target chain">
+    <h2>Software build graph for configuration @CMAKE_BUILD_TYPE@</h2>
+    <img src="graph-cmake-@CMAKE_BUILD_TYPE@.png" alt="Software build graph for configuration @CMAKE_BUILD_TYPE@">
 </body>
 
 </html>
