Add software build process documentation (#12)
* Add software build process documentation

* Add graph-cmake-${CMAKE_BUILD_TYPE}.png in software build process

* Formatting

---------

Co-authored-by: =Maxime Haselbauer <=renn0xtek9@laposte.net>

--- a/documentation/CMakeLists.txt
+++ b/documentation/CMakeLists.txt
@@ -15,3 +15,5 @@ ADD_CUSTOM_TARGET (
   COMMENT "Target code_documentation"
   SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/code_documentation.doxygen.in
   DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/code_documentation/html/index.html)
+
+ADD_SUBDIRECTORY (development_process)
