Create documentation artifact

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ LIST (APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/)
 INCLUDE (${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 CONAN_BASIC_SETUP (PROFILE ${CMAKE_SOURCE_DIR}/conan_profiles/linux-x86)
 
+INCLUDE (GNUInstallDirs)
 INCLUDE (Packaging)
 INCLUDE (AddLibraryUnitTest)
 INCLUDE (CreateLibrary)
