--- a/documentation/requirements_engineering/CMakeLists.txt
+++ b/documentation/requirements_engineering/CMakeLists.txt
@@ -12,3 +12,10 @@ CREATELATEXDOCUMENT (
   "${requirements_document}" "${REQUIREMENTS_DOCUMENT_MAIN_TEX}"
   "${REQUIREMENTS_DOCUMENTS_RESOURCES_FILES}"
   "${REQUIREMENTS_DOCUMENTS_BIBLIOGRAPHY}")
+
+IF (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+  INSTALL (
+    FILES
+      "${CMAKE_CURRENT_BINARY_DIR}/requirements_document/requirements_document.pdf"
+    DESTINATION "${CMAKE_INSTALL_DOCDIR}/")
+ENDIF ()
