--- a/documentation/CMakeLists.txt
+++ b/documentation/CMakeLists.txt
@@ -1,19 +1,3 @@
 ADD_SUBDIRECTORY (requirements_engineering)
-
-# Doxygen documentation
-CONFIGURE_FILE (${CMAKE_CURRENT_SOURCE_DIR}/code_documentation.doxygen.in
-                ${CMAKE_CURRENT_BINARY_DIR}/code_documentation.doxygen)
-ADD_CUSTOM_COMMAND (
-  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/code_documentation/html/index.html
-  DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/code_documentation.doxygen
-  VERBATIM
-  COMMAND doxygen ${CMAKE_CURRENT_BINARY_DIR}/code_documentation.doxygen
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-  COMMENT "Building doxygen code documentation")
-ADD_CUSTOM_TARGET (
-  code_documentation
-  COMMENT "Target code_documentation"
-  SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/code_documentation.doxygen.in
-  DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/code_documentation/html/index.html)
-
+ADD_SUBDIRECTORY (doxygen)
 ADD_SUBDIRECTORY (development_process)
