--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,10 +4,10 @@ repos:
     hooks:
       - id: checkmake
   - repo: https://github.com/cheshirekow/cmake-format-precommit
-    rev: v0.6.13
+    rev: v0.6.10
     hooks:
     - id: cmake-format
-    # - id: cmake-lint
+    - id: cmake-lint
   - repo: https://github.com/pocc/pre-commit-hooks
     rev: v1.3.5
     hooks:
